--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,16 @@
     "containerEnv": {
         "CONTAINER_PATH": "${localEnv:PATH}",
         "CONTAINER_USER": "${localEnv:USER}",
-        "CONTAINER_HOME": "${localEnv:HOME}"
+        "CONTAINER_HOME": "${localEnv:HOME}",
+        "CONTAINER_HOSTNAME": "${env:HOSTNAME}",
+        "CONTAINER_TERM": "${env:TERM}"
     },
     
     "remoteEnv": {
         "REMOTE_PATH": "${localEnv:PATH}",
         "REMOTE_TO_CONTAINER_PATH": "${containerEnv:PATH}",
-        "REMOTE_TO_CONTAINER_PATH_BLOCK": "${containerEnv:CONTAINER_PATH}"
+        "REMOTE_TO_CONTAINER_PATH_BLOCK": "${containerEnv:CONTAINER_PATH}",
+        "REMOTE_CONTAINER_HOSTNAME": "${containerEnv:HOSTNAME}",
+        "REMOTE_CONTAINER_TERM": "${containerEnv:TERM}"
     }
 }
