--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,8 @@
         "REMOTE_CONTAINER_TERM": "${containerEnv:TERM}",
         "REMOTE_CLOUDENV_ENVIRONMENT_ID": "${containerEnv:CLOUDENV_ENVIRONMENT_ID}",
         "REMOTE_CLOUDENV_SERVICE_ENPOINT": "${containerEnv:CLOUDENV_SERVICE_ENDPOINT}",
-        "REMOTE_PAT": "${containerEnv:GIT_PAT}"
+        "REMOTE_PAT": "${containerEnv:GIT_PAT}",
+        "REMOTE_TO_RVM_PATH": "${containerEnv:RVM_PATH}",
+        "REMOTE_TO_SDKMAN_PLATFORM": "${containerEnv:SDKMAN_PLATFORM}"
     }
 }
