--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,16 @@
         "CONTAINER_HOME": "${localEnv:HOME}",
         "CONTAINER_HOSTNAME": "${env:HOSTNAME}",
         "CONTAINER_TERM": "${env:TERM}"
+    },
+
+    "remoteEnv": {
+        "REMOTE_PATH": "${localEnv:PATH}",
+        "REMOTE_TO_CONTAINER_PATH": "${containerEnv:PATH}",
+        "REMOTE_TO_CONTAINER_PATH_BLOCK": "${containerEnv:CONTAINER_PATH}",
+        "REMOTE_CONTAINER_HOSTNAME": "${containerEnv:HOSTNAME}",
+        "REMOTE_CONTAINER_TERM": "${containerEnv:TERM}",
+        "REMOTE_CLOUDENV_ENVIRONMENT_ID": "${containerEnv:CLOUDENV_ENVIRONMENT_ID}",
+        "REMOTE_CLOUDENV_SERVICE_ENPOINT": "${containerEnv:CLOUDENV_SERVICE_ENDPOINT}",
+        "REMOTE_PAT": "${containerEnv:GIT_PAT}"
     }
 }
