--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,7 @@
         "REMOTE_CLOUDENV_ENVIRONMENT_ID": "${containerEnv:CLOUDENV_ENVIRONMENT_ID}",
         "REMOTE_CLOUDENV_SERVICE_ENPOINT": "${containerEnv:CLOUDENV_SERVICE_ENDPOINT}",
         "REMOTE_PAT": "${containerEnv:GIT_PAT}"
-    }
+    },
+        
+    "postCreateCommand": "echo $CONTAINER_PATH"
 }
